harness/test/errors/036_arrow_as_lambda.eu
# Mistake: using -> as lambda syntax (-> is const, not lambda)
xs: [1, 2, 3]
result: xs map(x -> x + 1)
